--- a/view_result.ipynb
+++ b/view_result.ipynb
@@ -6,19 +6,19 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-03-31T03:18:39.269749Z",
-     "start_time": "2025-03-31T03:18:39.248815Z"
+     "end_time": "2025-04-01T03:17:11.857612Z",
+     "start_time": "2025-04-01T03:17:11.817590Z"
     }
    },
    "source": "LOG_PATH = r\"D:\\code\\WindowsAgentArena\\src\\win-arena-container\\client\\results\\pyautogui\\a11y_tree\\gpt-4-vision-preview\\0\"",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-03-31T03:59:13.370125Z",
-     "start_time": "2025-03-31T03:59:13.318436Z"
+     "end_time": "2025-04-01T03:17:16.329821Z",
+     "start_time": "2025-04-01T03:17:13.809233Z"
     }
    },
    "cell_type": "code",
@@ -79,19 +79,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ppt - 3b27600c-3668-4abd-8f84-7bcdebbccbdb: 0.7090541394272092\n",
-      "ppt - 455d3c66-7dc6-4537-a39a-36d3e9119df7: 0.9944257695963055\n",
+      "multi_app - 6d72aad6-187a-4392-a4c4-ed87269c51cf: 1\n",
+      "multi_app - a82b78bb-7fde-4cb3-94a4-035baf10bcf0: 1\n",
       "word - 0b17a146-2934-46c7-8727-73ff6b6483e8: 1\n",
       "word - 0e763496-b6bb-4508-a427-fad0b6c3e195: 1\n",
-      "word - 4bcb1253-a636-4df4-8cb0-a35c04dfef31: 0.9805042890564075\n",
       "word - ecc2413d-8a48-416e-a3a2-d30106ca36cb: 1\n",
-      "{' ': 'ppt', 'Total Tests': 6, 'Successful Tests': 2, 'Success Rate': 0.3333333333333333}\n",
-      "{' ': 'word', 'Total Tests': 9, 'Successful Tests': 4, 'Success Rate': 0.4444444444444444}\n",
-      "{' ': 'OVERALL', 'Total Tests': 15, 'Successful Tests': 6, 'Success Rate': 0.4}\n"
+      "{' ': 'excel', 'Total Tests': 11, 'Successful Tests': 0, 'Success Rate': 0.0}\n",
+      "{' ': 'multi_app', 'Total Tests': 22, 'Successful Tests': 2, 'Success Rate': 0.09090909090909091}\n",
+      "{' ': 'ppt', 'Total Tests': 7, 'Successful Tests': 0, 'Success Rate': 0.0}\n",
+      "{' ': 'word', 'Total Tests': 9, 'Successful Tests': 3, 'Success Rate': 0.3333333333333333}\n",
+      "{' ': 'OVERALL', 'Total Tests': 49, 'Successful Tests': 5, 'Success Rate': 0.10204081632653061}\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 4
   },
   {
    "metadata": {
